novos arquivos para entrega parcial

--- a/relatorioparcial/readme
+++ b/relatorioparcial/readme
@@ -1,3 +1,3 @@
-Relatorio Parcial do Projeto 1.
+Relatorio Parcial do Projeto em arquivo "relatorio1.pdf"
 Nome: Liz Huancapaza Hilasaca
 N.USP 10423932
